@@ -9,6 +9,8 @@ Changes in 2.2.1
        The previous behaviour was to enable ACL support for a volume if
        1) it was compiled in and 2) the volume supported ACLs. There was no way
        to disable ACLs for a volume.
+* UPD: afpd: add a configurable hold time option to FCE file modification event
+       generation, default is 60 s, new option "fceholdfmod" to change it
 * FIX: afpd: increase BerkeleyDB locks and lockobjs
 * FIX: afpd: create special folder as root
 * FIX: afpd: fix compilation error if --enable-ddp is used
